Added FAQs Block

--- a/index.html
+++ b/index.html
@@ -580,8 +580,54 @@
       </section>
 
       <!-- ----------------------------------------------------FAQs -->
-      <section class="Faqs_section"></section>
-      <!-- Main -->
+      <section class="Faqs_section">
+        <div class="Faqs_header_box">
+          <h2 class="Header_faqs">FAQs</h2>
+        </div>
+        <div class="Faqs_question_aria">
+          <div class="Faqs_question_box">
+            <div class="Faqs_questionanswer_box">
+              <H3 class="Faqs_question">What are the NFTs?</H3>
+              <img src="" alt="">
+            </div>
+            <div class="Faqs_questionanswer_box">
+              <p class="Faqs_answer">Urna vitae erat et lacus, consectetur ac nulla vestibulum lobortis. Nulla dapibus urna volutpat venenatis, risus faucibus.</p>
+              <img src="" alt="">
+            </div>
+          </div>
+          <div class="Faqs_question_box">
+            <div class="Faqs_questionanswer_box">
+              <H3 class="Faqs_question">How do i get NFTs?</H3>
+              <img src="" alt="">
+            </div>
+            <div class="Faqs_questionanswer_box">
+              <p class="Faqs_answer">Urna vitae erat et lacus, consectetur ac nulla vestibulum lobortis. Nulla dapibus urna volutpat venenatis, risus faucibus.</p>
+              <img src="" alt="">
+            </div>
+          </div>
+          <div class="Faqs_question_box">
+            <div class="Faqs_questionanswer_box">
+              <H3 class="Faqs_question">How can we buy your NFTs?</H3>
+              <img src="" alt="">
+            </div>
+            <div class="Faqs_questionanswer_box">
+              <p class="Faqs_answer">Urna vitae erat et lacus, consectetur ac nulla vestibulum lobortis. Nulla dapibus urna volutpat venenatis, risus faucibus.</p>
+              <img src="" alt="">
+            </div>
+          </div>
+          <div class="Faqs_question_box">
+            <div class="Faqs_questionanswer_box">
+              <H3 class="Faqs_question">Who are the team behind the project?</H3>
+              <img src="" alt="">
+            </div>
+            <div class="Faqs_questionanswer_box">
+              <p class="Faqs_answer">Urna vitae erat et lacus, consectetur ac nulla vestibulum lobortis. Nulla dapibus urna volutpat venenatis, risus faucibus.</p>
+              <img src="" alt="">
+            </div>
+          </div>
+        </div>
+      </section>
+      
     </main>
     <!-- ------------------------------------------------------------------------Footer -->
     <footer class="footer">
