modified:   Main.css

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         <div class="blog_header">
           <h2>Our blog</h2>
         </div>
-        <div class="blog_Grid_section">
+        <div class="blog_grid_section">
           <div class="blog_kard">
             <div class="blog_foto_box">
               <div class="nft_box">
@@ -403,7 +403,7 @@
             </p>
           </li>
 
-          <li class="aboutUs_card">
+          <li class="aboutas_card">
             <h3 class="abautus_card_header">Big collection</h3>
             <p>
               Lorem Ipsum is simply dummy text of the printing and Ipsum
@@ -585,60 +585,58 @@
           <h2 class="header_faqs">FAQs</h2>
         </div>
         <div class="faqs_question_aria">
-          <div class="faqs_question_box">
-            <div class="Faqs_questionanswer_box">
-              <h3 class="faqs_question">What are the NFTs?</h3>
-              <img src="" alt="" />
-            </div>
-            <div class="faqs_questionanswer_box">
-              <p class="Faqs_answer">
+          <details class="faq-item">
+            <summary class="faq-question">
+              <img src="" alt="Question icon" class="faq-question-icon" />
+              What are the NFTs?
+            </summary>
+            <div class="faq-content">
+              <img src="" alt="Team photo" class="faq-content-image" />
+              <p class="faq-answer">
                 Urna vitae erat et lacus, consectetur ac nulla vestibulum
                 lobortis. Nulla dapibus urna volutpat venenatis, risus faucibus.
               </p>
-              <img src="" alt="" />
             </div>
-          </div>
-          <div class="faqs_question_box">
-            <div class="faqs_questionanswer_box">
-              <h3 class="faqs_question">How do i get NFTs?</h3>
-              <img src="" alt="" />
-            </div>
-            <div class="faqs_questionanswer_box">
-              <p class="faqs_answer">
+          </details>
+          <details class="faq-item">
+            <summary class="faq-question">
+              <img" alt="Question icon" class="faq-question-icon" /> How do i
+              get NFTs?
+            </summary>
+            <div class="faq-content">
+              <img src="" alt="Team photo" class="faq-content-image" />
+              <p class="faq-answer">
                 Urna vitae erat et lacus, consectetur ac nulla vestibulum
                 lobortis. Nulla dapibus urna volutpat venenatis, risus faucibus.
               </p>
-              <img src="" alt="" />
             </div>
-          </div>
-          <div class="faqs_question_box">
-            <div class="faqs_questionanswer_box">
-              <h3 class="faqs_question">How can we buy your NFTs?</h3>
-              <img src="" alt="" />
-            </div>
-            <div class="faqs_questionanswer_box">
-              <p class="faqs_answer">
+          </details>
+          <details class="faq-item">
+            <summary class="faq-question">
+              <img src="" alt="Question icon" class="faq-question-icon" />
+              How can we buy your NFTs?
+            </summary>
+            <div class="faq-content">
+              <img src="" alt="Team photo" class="faq-content-image" />
+              <p class="faq-answer">
                 Urna vitae erat et lacus, consectetur ac nulla vestibulum
                 lobortis. Nulla dapibus urna volutpat venenatis, risus faucibus.
               </p>
-              <img src="" alt="" />
             </div>
-          </div>
-          <div class="faqs_question_box">
-            <div class="faqs_questionanswer_box">
-              <h3 class="faqs_question">
-                Who are the team behind the project?
-              </h3>
-              <img src="" alt="" />
-            </div>
-            <div class="faqs_header_box">
-              <p class="faqs_answer">
+          </details>
+          <details class="faq-item">
+            <summary class="faq-question">
+              <img src="" alt="Question icon" class="faq-question-icon" />
+              Who are the team behind the project?
+            </summary>
+            <div class="faq-content">
+              <img src="" alt="Team photo" class="faq-content-image" />
+              <p class="faq-answer">
                 Urna vitae erat et lacus, consectetur ac nulla vestibulum
                 lobortis. Nulla dapibus urna volutpat venenatis, risus faucibus.
               </p>
-              <img src="" alt="" />
             </div>
-          </div>
+          </details>
         </div>
       </section>
     </main>
