--- a/index.html
+++ b/index.html
@@ -145,26 +145,27 @@
               <h3 class="card__name">Name Product</h3>
             </div>
           </article>
-          <article class="banner__card">
-            <div class="catalog__img__box">
-              <img src="./img/Propertycat.jpeg" alt="" class="catalog__img" />
-              <div class="card__info">New</div>
-            </div>
-            <div class="catalog__price_box">
-              <span class="card__price">$199</span>
-              <h3 class="card__name">Name Product</h3>
-            </div>
-          </article>
-          <article class="banner__card">
-            <div class="catalog__img__box">
-              <img src="./img/Propertycccc.jpeg" alt="" class="catalog__img" />
-              <div class="card__info">Sold out</div>
-            </div>
-            <div class="catalog__price_box">
-              <span class="Card__price">$199</span>
-              <h3 class="card__name">Name Product</h3>
-            </div>
-          </article>
+                                                        <article class="banner__card">
+                                                          <div class="catalog__img__box">
+                                                            <img src="./img/Propertycat.jpeg" alt="" class="catalog__img" />
+                                                            <div class="card__info">New</div>
+                                                          </div>
+                                                          <div class="catalog__price_box">
+                                                            <span class="card__price">$199</span>
+                                                            <h3 class="card__name">Name Product</h3>
+                                                          </div>
+                                                        </article>
+                                                    <article class="banner__card">
+                                                      <div class="catalog__img__box">
+                                                        <img src="./img/Propertycccc.jpeg" alt="" class="catalog__img" />
+                                                        <div class="card__info_red">Sold out</div>
+                                                      </div>
+                                                      <div class="catalog__price_box">
+                                                        <span class="card__price">$199</span>
+                                                        <h3 class="card__name">Name Product</h3>
+                                                      </div>
+                                                    </article>
+
           <article class="banner__card">
             <div class="catalog__img__box">
               <img
@@ -179,6 +180,7 @@
               <h3 class="card__name">Name Product</h3>
             </div>
           </article>
+
           <article class="banner__card">
             <div class="catalog__img__box">
               <img
@@ -384,8 +386,8 @@
         </div>
       </section>
       <!-- ---------------------------------------------------Abaut Us -->
-      <section class="aboutus">
-        <div class="aboutus--header_box">
+      <section class="aboutus-section">
+        <div class="aboutus-header_box">
           <h2 class="aboutus_header">About us</h2>
           <p>
             Duis aute irure dolor in reprehenderit in voluptate velit esse
