--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
   <body>
     <!-- --------------------------------------------------------------------------Header -->
     <header class="header">
-      <div class="logo">
-        <a href="#" id="lang" class="logo__link">
-          <img src="./img/Logo111.svg" alt="Logo" class="logo__img" />
-          <strong class="logo__text">BINABOX</strong>
-        </a>
-      </div>
+      <h1 class="logo__text">
+        <img src="./img/Logo111.svg" alt="Logo" class="logo__img" />BINABOX
+      </h1>
+
       <nav class="nav__header__bar">
         <ul class="header__bar__list">
           <li class="list__item__bar">
@@ -42,7 +40,7 @@
           /><input type="text" class="search-input" placeholder="Search" />
         </div>
         <!-- --------------------------------- -->
-        <div class="rectangle"></div>
+
         <!-- ---------------------------------- -->
         <div class="discord-link-box">
           <div class="discord-link-fig">
@@ -85,7 +83,7 @@
             </div>
             <div class="promo__number_box">
               <span class="Promo__number">1000+</span>
-              <p>Whitelist </p>
+              <p>Whitelist</p>
             </div>
           </div>
           <div class="promo__grupe_buttons">
@@ -102,16 +100,9 @@
           alt="image with a large blue cube"
           class="promo__img"
         />
-        <div class="promo_union_box">
-          <img
-            class="union-img"
-            src="./img/Patternsvg.svg"
-            alt="Pattern at the bottom of the box"
-          />
-        </div>
       </section>
       <!-- ----------------------------------------------------Catalog -->
-      <section id="catalog_section">
+      <section class="catalog_section">
         <div class="catalog_info_box">
           <div class="catalog_Lable_box">
             <img src="./img/Iconcataloge.png" alt="Folder Picture" />
@@ -122,10 +113,10 @@
             <button class="button-seeall">See all</button>
             <div class="rectangle"></div>
             <button class="button-see_zone">
-              <img src="./img/arrowleft.png" alt="Галочка" />
+              <img src="./img/arrowleft.png" alt="" />
             </button>
             <button class="button-see_zone">
-              <img src="./img/arrowright.png" alt="Галочка" />
+              <img src="./img/arrowright.png" alt="" />
             </button>
           </div>
         </div>
@@ -145,26 +136,26 @@
               <h3 class="card__name">Name Product</h3>
             </div>
           </article>
-                                                        <article class="banner__card">
-                                                          <div class="catalog__img__box">
-                                                            <img src="./img/Propertycat.jpeg" alt="" class="catalog__img" />
-                                                            <div class="card__info">New</div>
-                                                          </div>
-                                                          <div class="catalog__price_box">
-                                                            <span class="card__price">$199</span>
-                                                            <h3 class="card__name">Name Product</h3>
-                                                          </div>
-                                                        </article>
-                                                    <article class="banner__card">
-                                                      <div class="catalog__img__box">
-                                                        <img src="./img/Propertycccc.jpeg" alt="" class="catalog__img" />
-                                                        <div class="card__info_red">Sold out</div>
-                                                      </div>
-                                                      <div class="catalog__price_box">
-                                                        <span class="card__price">$199</span>
-                                                        <h3 class="card__name">Name Product</h3>
-                                                      </div>
-                                                    </article>
+          <article class="banner__card">
+            <div class="catalog__img__box">
+              <img src="./img/Propertycat.jpeg" alt="" class="catalog__img" />
+              <div class="card__info">New</div>
+            </div>
+            <div class="catalog__price_box">
+              <span class="card__price">$199</span>
+              <h3 class="card__name">Name Product</h3>
+            </div>
+          </article>
+          <article class="banner__card">
+            <div class="catalog__img__box">
+              <img src="./img/Propertycccc.jpeg" alt="" class="catalog__img" />
+              <div class="card__info_red">Sold out</div>
+            </div>
+            <div class="catalog__price_box">
+              <span class="card__price">$199</span>
+              <h3 class="card__name">Name Product</h3>
+            </div>
+          </article>
 
           <article class="banner__card">
             <div class="catalog__img__box">
@@ -221,7 +212,7 @@
               </div>
             </div>
             <div class="blog_header_box">
-              <h2 class="blog_header">Sonic live</h2>
+              <h3 class="blog_header">Sonic live</h3>
               <p>
                 One September 22, 2021 A volutpat nulla eros, nulla ultrices nec
                 nulla imperdiet...
@@ -398,36 +389,42 @@
           </p>
         </div>
         <ol class="aboutus_card_box">
-          <li class="aboutus_card">
-            <h3 class="abautus_card_header">High quality</h3>
-            <p>
-              Lorem Ipsum is simply dummy text of the printing and Ipsum
-              typesetting industry.
-            </p>
-          </li>
-
-          <li class="aboutas_card">
-            <h3 class="abautus_card_header">Big collection</h3>
-            <p>
-              Lorem Ipsum is simply dummy text of the printing and Ipsum
-              typesetting industry.
-            </p>
-          </li>
-
-          <li class="aboutus_card">
-            <h3 class="abautus_card_header">Top Resourse</h3>
-            <p>
-              Lorem Ipsum is simply dummy text of the printing and Ipsum
-              typesetting industry.
-            </p>
-          </li>
-          <li class="aboutus_card">
-            <h3 class="abautus_card_header">Big community</h3>
-            <p>
-              Lorem Ipsum is simply dummy text of the printing and Ipsum
-              typesetting industry.
-            </p>
-          </li>
+          <a href="" class="about-us__card_link">
+            <li class="aboutus_card">
+              <h3 class="abautus_card_header">High quality</h3>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and Ipsum
+                typesetting industry.
+              </p>
+            </li>
+          </a>
+          <a href="" class="about-us__card_link">
+            <li class="aboutas_card">
+              <h3 class="abautus_card_header">Big collection</h3>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and Ipsum
+                typesetting industry.
+              </p>
+            </li>
+          </a>
+          <a href="" class="about-us__card_link">
+            <li class="aboutus_card">
+              <h3 class="abautus_card_header">Top Resourse</h3>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and Ipsum
+                typesetting industry.
+              </p>
+            </li>
+          </a>
+          <a href="" class="about-us__card_link">
+            <li class="aboutus_card">
+              <h3 class="abautus_card_header">Big community</h3>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and Ipsum
+                typesetting industry.
+              </p>
+            </li>
+          </a>
         </ol>
         <div class="abautus_button_box">
           <a href="#" class="button_readmore">Read more</a>
@@ -435,14 +432,13 @@
       </section>
       <!-- ----------------------------------------------------Our Team -->
       <section class="ourteam_section">
-        <div class="ourteam_header_box">
-          <h2 class="ourteam_header">Our Team</h2>
-        </div>
+        <h2 class="ourteam_header">Our Team</h2>
+
         <div class="ourteam_card_box">
           <div class="ourteam_card">
             <img src="" alt="" class="ourteam_foto" />
             <div class="ourteam_info">
-              <h3 class="ourteam_name">Jason Smith</h3>
+              <strong class="ourteam_name">Jason Smith</strong>
               <p>Co - Founder</p>
               <div class="ourteam_socials_box">
                 <div class="ourteam_social_list">
@@ -470,7 +466,7 @@
           <div class="ourteam_card">
             <img src="" alt="" class="ourteam_foto" />
             <div class="ourteam_info">
-              <h3 class="ourteam_name">Jason Smith</h3>
+              <strong class="ourteam_name">Jason Smith</strong>
               <p>Co - Founder</p>
               <div class="ourteam_socials_box">
                 <div class="ourteam_social_list">
@@ -495,10 +491,11 @@
               </div>
             </div>
           </div>
+
           <div class="ourteam_card">
             <img src="" alt="" class="ourteam_foto" />
             <div class="ourteam_info">
-              <h3 class="ourteam_name">Jason Smith</h3>
+              <strong class="ourteam_name">Jason Smith</strong>
               <p>Co - Founder</p>
               <div class="ourteam_socials_box">
                 <div class="ourteam_social_list">
@@ -523,10 +520,11 @@
               </div>
             </div>
           </div>
-          <div class="Ourteam_card">
+
+          <div class="ourteam_card">
             <img src="" alt="" class="Ourteam_foto" />
             <div class="Ourteam_info">
-              <h3 class="Ourteam_name">Jason Smith</h3>
+              <strong class="Ourteam_name">Jason Smith</strong>
               <p>Co - Founder</p>
               <div class="Ourteam_socials_box">
                 <div class="Ourteam_social_list">
@@ -554,7 +552,7 @@
           <div class="Ourteam_card">
             <img src="" alt="" class="Ourteam_foto" />
             <div class="Ourteam_info">
-              <h3 class="Ourteam_name">Jason Smith</h3>
+              <strong class="Ourteam_name">Jason Smith</strong>
               <p>Co - Founder</p>
               <div class="Ourteam_socials_box">
                 <div class="Ourteam_social_list">
@@ -591,7 +589,7 @@
           <details class="faq-item">
             <summary class="faq-question">
               <img src="" alt="Question icon" class="faq-question-icon" />
-              What are the NFTs?
+              <p>What are the NFTs?</p>
             </summary>
             <div class="faq-content">
               <img src="" alt="Team photo" class="faq-content-image" />
@@ -601,10 +599,11 @@
               </p>
             </div>
           </details>
+
           <details class="faq-item">
             <summary class="faq-question">
-              <img" alt="Question icon" class="faq-question-icon" /> How do i
-              get NFTs?
+              <img" alt="Question icon" class="faq-question-icon" />
+              <p>How do i get NFTs?</p>
             </summary>
             <div class="faq-content">
               <img src="" alt="Team photo" class="faq-content-image" />
@@ -614,23 +613,25 @@
               </p>
             </div>
           </details>
-          <details class="faq-item">
-            <summary class="faq-question">
-              <img src="" alt="Question icon" class="faq-question-icon" />
-              How can we buy your NFTs?
-            </summary>
-            <div class="faq-content">
-              <img src="" alt="Team photo" class="faq-content-image" />
-              <p class="faq-answer">
-                Urna vitae erat et lacus, consectetur ac nulla vestibulum
-                lobortis. Nulla dapibus urna volutpat venenatis, risus faucibus.
-              </p>
-            </div>
-          </details>
+
           <details class="faq-item">
             <summary class="faq-question">
               <img src="" alt="Question icon" class="faq-question-icon" />
-              Who are the team behind the project?
+              <p>How can we buy your NFTs?</p>
+            </summary>
+            <div class="faq-content">
+              <img src="" alt="Team photo" class="faq-content-image" />
+              <p class="faq-answer">
+                Urna vitae erat et lacus, consectetur ac nulla vestibulum
+                lobortis. Nulla dapibus urna volutpat venenatis, risus faucibus.
+              </p>
+            </div>
+          </details>
+
+          <details class="faq-item">
+            <summary class="faq-question">
+              <img src="" alt="Question icon" class="faq-question-icon" />
+              <p>Who are the team behind the project?</p>
             </summary>
             <div class="faq-content">
               <img src="" alt="Team photo" class="faq-content-image" />
@@ -647,31 +648,31 @@
     <footer class="footer">
       <div class="footer_bar_box">
         <div class="footer_logo_box">
-          <div class="logo_box">
-            <img src="" alt="" class="logoimg" />
-            <h2 class="logo_header">BINABOX</h2>
-          </div>
+          <strong class="logo_header"
+            ><img src="" alt="" class="logoimg" />BINABOX</strong
+          >
+
           <p></p>
         </div>
         <div class="footer-nav__box">
           <h3>Subscribe</h3>
           <nav class="footer-nav">
-            <ol class="footer-nav__list">
+            <ul class="footer-nav__list">
               <li class="footer-nav__item"><a href="" class="item">home</a></li>
               <li class="footer-nav__item"><a href="" class="item">home</a></li>
               <li class="footer-nav__item"><a href="" class="item">home</a></li>
               <li class="footer-nav__item"><a href="" class="item">home</a></li>
-            </ol>
+            </ul>
           </nav>
         </div>
         <div class="footer_nav_box">
           <h3>Subscribe</h3>
           <nav class="footer-nav">
-            <ol class="footer-nav__list">
+            <ul class="footer-nav__list">
               <li class="footer-nav__item"><a href="" class="item">home</a></li>
               <li class="footer-nav__item"><a href="" class="item">home</a></li>
               <li class="footer-nav__item"><a href="" class="item">home</a></li>
-            </ol>
+            </ul>
           </nav>
         </div>
 
